--- a/src/gameserver.ini
+++ b/src/gameserver.ini
@@ -40,7 +40,7 @@ logFileVerbosity = 5
 serverTimeout = 300
 serverWsModule = "ws"
 serverMaxConnections = 500
-serverPort = 443
+serverPort = 3000
 serverBind = "0.0.0.0"
 serverTracker = 0
 serverGamemode = 0
@@ -67,8 +67,8 @@ serverMaxLB = 10
 serverChat = 1
 serverChatAscii = 1
 separateChatForTeams = 0
-serverName = "MultiOgar-Edited #1"
-serverWelcome1 = "Welcome to MultiOgar-Edited!"
+serverName = "MultiOgar"
+serverWelcome1 = "Welcome to MultiOgar"
 serverWelcome2 = ""
 clientBind = ""
 
@@ -99,13 +99,13 @@ borderHeight = 14142.135623730952
 ; foodSpawnAmount: The number of food to spawn per spawnInterval
 ; foodMassGrow: Enable food mass grow ?
 ; spawnInterval: The interval between each food cell spawn in ticks (1 tick = 40 ms)
-foodMinSize = 10
-foodMaxSize = 20
-foodMinAmount = 1000
+foodMinSize = 20
+foodMaxSize = 40
+foodMinAmount = 1700
 foodMaxAmount = 2000
-foodSpawnAmount = 30
+foodSpawnAmount = 40
 foodMassGrow = 1
-spawnInterval = 20
+spawnInterval = 10
 
 ; [VIRUSES]
 ; virusMinSize: Minimum virus size. (vanilla: mass = val*val/100 = 100 mass)
@@ -121,8 +121,8 @@ virusMinSize = 100
 virusMaxSize = 141.421356237
 virusMaxPoppedSize = 60
 virusEqualPopSize = 0
-virusMinAmount = 50
-virusMaxAmount = 100
+virusMinAmount = 20
+virusMaxAmount = 60
 motherCellMaxMass = 0
 virusVelocity = 780
 virusMaxCells = 0
@@ -134,7 +134,7 @@ virusMaxCells = 0
 ; ejectSpawnPercent: Chance for a player to spawn from ejected mass. 0.5 = 50% (set to 0 to disable)
 ; ejectVirus: Whether or not players can eject viruses instead of mass
 ; ejectVelocity: Velocity of ejecting cells (speed and distance)
-ejectSize = 36.06
+ejectSize = 40.06
 ejectSizeLoss = 42.43
 ejectCooldown = 3
 ejectSpawnPercent = 0.5
@@ -157,13 +157,13 @@ ejectVelocity = 780
 ; playerDecayCap: Maximum mass a cell can have before it's decayrate multiplies by 10. (0 to disable)
 ; playerDisconnectTime: Time in seconds before a disconnected player's cell is removed from the server (Set to -1 to never remove)
 ; splitVelocity: Velocity of splitting playercells (speed and distance)
-playerMinSize = 31.6227766017
+playerMinSize = 32.6227766017
 playerMaxSize = 1500
 playerMinSplitSize = 59.16079783
 playerMinEjectSize = 59.16079783
 playerStartSize = 31.6227766017
 playerMaxCells = 16
-playerSpeed = 1
+playerSpeed = 2
 playerDecayRate = 0.002
 playerDecayCap = 0
 playerRecombineTime = 30
